fj/src/test/resources/tests/inh-extends1.fj
class B extends A {
  B() {
    super();
  }
}
